@@ -19,7 +19,7 @@ Vue.component('lms-choice-dialog', {
       <v-list class="sleep-list dialog-main-list">
        <template v-for="(item, index) in items">
         <v-list-tile @click="choose(item)" :disabled="item.disabled" v-bind:class="{'dimmed':item.disabled}">
-         <div :tile="true" v-if="boundKeys" class="choice-key">{{9==index ? 0 : index+1}}</div>
+         <div :tile="true" v-if="boundKeys" class="choice-key">{{firstIsZero ? index : 9==index ? 0 : index+1}}</div>
          <v-list-tile-avatar :tile="true" class="lms-avatar" v-if="item.icon || item.svg"><v-icon v-if="item.icon">{{item.icon}}</v-icon><img v-else class="svg-img" :src="item.svg | svgIcon(darkUi)"></img></v-list-tile-avatar>
          <v-list-tile-content>
           <v-list-tile-title>{{item.title}}</v-list-tile-title>
@@ -49,7 +49,8 @@ Vue.component('lms-choice-dialog', {
             items: [],
             options:[],
             option:0,
-            boundKeys: false
+            boundKeys: false,
+            firstIsZero: false
         }
     },
     computed: {
@@ -58,12 +59,13 @@ Vue.component('lms-choice-dialog', {
         }
     },
     mounted() {
-        bus.$on('choice.open', function(title, items, extra) {
+        bus.$on('choice.open', function(title, items, extra, firstIsZero) {
             this.boundKeys = false;
             this.title = title;
             this.items = items;
             this.options = undefined==extra || undefined==extra.options ? [] : extra.options;
             this.key = undefined==extra ? undefined : extra.key;
+            this.firstIsZero = undefined!=firstIsZero && firstIsZero;
             if (undefined!=this.key) {
                 this.option = parseInt(getLocalStorageVal('choice-'+this.key, undefined==extra.def ? 0 : extra.def));
             }
@@ -137,9 +139,9 @@ Vue.component('lms-choice-dialog', {
     }
 })
 
-function choose(title, items, extra) {
+function choose(title, items, extra, firstIsZero) {
     return new Promise(function(response) {
-        bus.$emit('dlg.open', 'choice', title, items, extra);
+        bus.$emit('dlg.open', 'choice', title, items, extra, firstIsZero);
         bus.$once('choice.resp', function(resp, option) {
             response(undefined==option ? resp : {item:resp, option:option});
         });
