@@ -671,16 +671,16 @@ function bindNumeric(dlg) {
     dlg.boundKeys = false;
     if (!IS_MOBILE && dlg.items.length<=10 && dlg.$store.state.keyboardControl) {
         for (let i=0, len=dlg.items.length; i<len; ++i) {
-            bindKey(""+(i<9 ? i+1 : 0));
+            bindKey(""+(dlg.firstIsZero ? i : i<9 ? i+1 : 0));
         }
         dlg.boundKeys=true;
     }
 }
 
-function unbindNumeric(dlg) {
+function unbindNumeric(dlg, firstIsZero) {
     if (!IS_MOBILE && dlg.items.length<=10 && dlg.boundKeys) {
         for (let i=0, len=dlg.items.length; i<len; ++i) {
-            unbindKey(""+(i<9 ? i+1 : 0));
+            unbindKey(""+(dlg.firstIsZero ? i :i<9 ? i+1 : 0));
         }
     }
     dlg.boundKeys = false;
@@ -691,10 +691,12 @@ function handleNumeric(dlg, func, itemKey) {
         if (dlg.show && dlg.boundKeys && undefined==modifier) {
             let val = parseInt(key);
             if ((""+val)==key) {
-                if (0==val) {
-                    val=9;
-                } else {
-                    val--;
+                if (undefined==dlg.firstIsZero || !dlg.firstIsZero) {
+                    if (0==val) {
+                        val=9;
+                    } else {
+                        val--;
+                    }
                 }
                 if (val>=0 && val<dlg.items.length) {
                     func(undefined==itemKey ? dlg.items[val] : dlg.items[val][itemKey]);
