@@ -15,6 +15,7 @@
  9. Add support for LMS9's portraitid attribute - thanks to Michael Herger.
 10. If no playlist image found, use first valid image found in playlist tracks.
 11. Add (server side) option to enable playlist images.
+12. When prompting for discs to add to queue use '0' for 'All discs'.
 
 5.8.3
 -----
